# tauri-inventory-manager-backend

./: Cargo.toml  README.md
migrations/2022-09-18-212508_users/: up.sql
migrations/2022-09-18-212554_preferences/: down.sql  up.sql
migrations/2022-09-18-212600_permissions/: up.sql
migrations/2022-09-18-212625_products/: down.sql  up.sql
migrations/2022-09-18-212627_categories/: up.sql
migrations/2022-09-18-212633_suppliers/: up.sql
migrations/2022-09-18-212648_brands/: up.sql
migrations/2022-09-18-213012_received_orders/: down.sql  up.sql
migrations/2022-09-18-213028_pending_orders/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs
