[package]
name = "inventorymanagerbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
diesel = { version = "2.0.0-rc.0", features = [
    "postgres",
    "numeric",
    "chrono",
    "r2d2",
    "serde_json",
] }
diesel-async = { git = "https://github.com/weiznich/diesel_async", features = [
    "postgres",
] }
deadpool = { version = "0.9.5", features = ["managed"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"
chrono = { version = "0.4.2", features = ["serde"] }
ordered-float = "3.0.0"
diesel_migrations = "2.0.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bcrypt = "0.13.0"
anyhow = "1.0.65"
hyper = "0.14.20"
